--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,4 +45,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageViewGif"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        app:srcCompat="@mipmap/ic_launcher_round"
+        tools:layout_editor_absoluteX="44dp"
+        tools:layout_editor_absoluteY="498dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
